2012-08-22  Ramon Casero  <rcasero@gmail.com>

	* CMakeLists.txt: (v0.1.5)

	- We need to find Matlab at the beginning, so that we can decide
	which version of gcc we need to compile gerardus with. We need to
	compile ITK and Gerardus with the same gcc version Matlab was
	compiled with.

	* matlab/FindMatlab.cmake: (v0.2.4)

	- In Linux and Mac OSX systems, find which Matlab version we have,
	and assign it to variable MATLAB_VERSION.

2012-08-22  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/itk_imfilter.m: (v0.5.1)

	- Allow variable number of input arguments.

2012-08-17  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/third-party/CGAL-4.0.2/CMakeLists.txt: (v0.1.1)

	- Comment out installation of documentation, includes, etc that we
	don't need to install in the system for gerardus.

	- CGAL libraries were being installed to gerardus/lib/lib. Change
	this to gerardus/lib/Gerardus.

	* cpp/src/third-party/CGAL-4.0.2/cmake/modules/FindMPFR.cmake: (v0.1.1)

	- Remove two debug MESSAGE() that I had left by mistake.

2012-08-10  Ramon Casero  <rcasero@gmail.com>

	* cpp/src/PadSegmentationMaskWithVoxels.cxx: (v0.2.0)
	* cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1/itkAnisotropicDiffusionVesselEnhancementImageFilter.txx: (0.3.1)

	- Fix bug. ITK v2.4 and over no longer support .Begin() method in
	itk::ImageRegionIterator.

2012-08-07  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add matlab/PointsToolbox/findpeaksn.m: (v0.1.0)

	- Find local peaks (local maxima) in n-dimensional data.

2012-08-06  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* FiltersToolbox/scinrrd_ndgrid.m: (v0.2.0)

	- Add ri, ci, si variables so that the user can enter the indices
	of the image block the grid should be generated for.

	* Add matlab/FiltersToolbox/scimat_local_convhull.m: (v0.1.0)

	- SCIMAT_LOCAL_CONVHULL  Smoothing of a binary image using a local
	convex hull.

	* Add ThirdPartyToolbox/alphavol.m:
	* Add ThirdPartyToolbox/license-alphavol.txt:
